--- a/static/code-samples/frontEnd/theme.css
+++ b/static/code-samples/frontEnd/theme.css
@@ -7,12 +7,23 @@
 }
 
 .jumbotron{
-	height: 100%; /* Full PAge */
-	position: relative;
+	/*height: calc(100vh-50px) !important; /* Full PAge */
+*/	position: relative;
+	background-attachment: fixed;
 	padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
 	padding-bottom: 50px;
 	color: #f8f8f8;
 	background: url(jumbotron_bg.jpg) no-repeat center center;
 	background-size: cover;
 	text-align: center;
+}
+
+#container1{
+	background-attachment: fixed !important;
+	background-color: LightSteelBlue ;
+}
+
+#container2 {
+	height: 450px;
+	background-color: LightGray;
 }
