--- a/static/code-samples/theme.css
+++ b/static/code-samples/theme.css
@@ -10,7 +10,7 @@ p {
 }
 
 
-.intro-header {
+.jumbotron {
 	height: 100%; /* Full PAge */
 	padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
 	padding-bottom: 50px;
