--- a/turnedOn/backendStuffs/templates/backendStuffs/index.html
+++ b/turnedOn/backendStuffs/templates/backendStuffs/index.html
@@ -9,12 +9,12 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="login.js"></script>
+    <script src="static/code-samples/frontEnd/login.js"></script>
     <title>Turned ON</title>
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap/bootstrap-3.3.2-dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="theme.css">
+    <link rel="stylesheet" type="text/css" href="static/code-samples/frontEnd/theme.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -56,27 +56,23 @@
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
-<<<<<<< HEAD
         <h1 style = "color:white">Get TurnedOn Now!</h1>
         <p style = "color:white">Connect instantly via text with people around you who share your interests!</p>
         <p><button  id="      "  onclick="  ()" type="button"   class="btn btn-primary btn-lg" >Learn more &raquo;</a></p>
-=======
-<<<<<<< HEAD
+
       <div id = "replaceAfterLogin1" class="container jumbotron">
         <h1>Hello!</h1>
         <p>Turn on is a platform where you can connect with people with same interests around you!</p>
         <button id = "createAcc" type="button" class="btn btn-success" onclick="create_account()">Don't have accoount? Create one!</button>
 
       <div class="container">
-=======
+
       <div class="container-fluid">
->>>>>>> FETCH_HEAD
         <h1 style = "color:white">Get TurnedOn Now!</h1>
         <p style = "color:white">Connect instantly via text with people around you who share your interests!</p>
         <button onclick="create_account()" type="button"  class="btn btn-primary btn-lg">Don't have account? Create one! </button>
         <br/>
       </div>
->>>>>>> origin/master
     </div>
 
 
@@ -92,10 +88,7 @@
       <hr>
     </div> <!-- /container -->
 
-<<<<<<< HEAD
-
     <div class="container2" style = "height:450px">
-=======
   <div class="col-md-6 text-left wrap_title">
     <h2>View Groups in your community!</h2>
     <p class="lead" style="margin-top:0">groups here<br></p>
@@ -103,7 +96,6 @@
     
     
     <div class="jumbotron" style = "height:700px">
->>>>>>> origin/master
       <div id = "signscreen" class="container">
         <h1><br>Create Account</h1>
         <p>Create account and connect with people around you!</p>
@@ -113,7 +105,6 @@
 
         <form>
         Phone Number : <input type="text" name = "username" size = "50"/>
-<<<<<<< HEAD
         <br/>
         <hr/>
         <p> select the city you live in: </p>
@@ -129,7 +120,6 @@
             </select>
           </datalist> 
           </form>
-=======
         <br/><br/>
         <button type="button" id = "getVerNum" onclick="getver()" class="btn btn-primary btn-lg"> Get Verification Code </button>
         <br/><br/>
@@ -141,7 +131,6 @@
           <option value = "0" >please choose from below </option>
               
         </select>
->>>>>>> FETCH_HEAD
         <br/><br/>
         <form>
           Verification Code : <input type = "code" name="verificationCode"/>
@@ -180,7 +169,7 @@
     }}});
   
     </script>
-    <script src="bootstrap/bootstrap-3.3.2-dist/js/bootstrap.min.js"></script>
+    <script src="static/code-samples/frontEnd/bootstrap/bootstrap-3.3.2-dist/js/bootstrap.min.js"></script>
   
   </body>
 </html>
