--- a/turnedOn/backendStuffs/templates/backendStuffs/index.html
+++ b/turnedOn/backendStuffs/templates/backendStuffs/index.html
@@ -13,8 +13,8 @@
     <title>Turned ON</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="bootstrap/bootstrap-3.3.2-dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="static/code-samples/frontEnd/theme.css">
+    <link href="/static/code-samples/frontEnd/bootstrap/bootstrap-3.3.2-dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/static/code-samples/frontEnd/theme.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
