--- a/turnedOn/backendStuffs/templates/backendStuffs/index.html
+++ b/turnedOn/backendStuffs/templates/backendStuffs/index.html
@@ -60,13 +60,12 @@
         <p style = "color:white">Connect instantly via text with people around you who share your interests!</p>
         <p><button  id="      "  onclick="  ()" type="button"   class="btn btn-primary btn-lg" >Learn more &raquo;</a></p>
 
-      <div id = "replaceAfterLogin1" class="container jumbotron">
+      <!-- <div id = "replaceAfterLogin1" class="container jumbotron">
         <h1>Hello!</h1>
         <p>Turn on is a platform where you can connect with people with same interests around you!</p>
-        <button id = "createAcc" type="button" class="btn btn-success" onclick="create_account()">Don't have accoount? Create one!</button>
+        <button id = "createAcc" type="button" class="btn btn-success" onclick="create_account()">Don't have accoount? Create one!</button> -->
 
-      <div class="container">
-
+    <div class="container">
       <div class="container-fluid">
         <h1 style = "color:white">Get TurnedOn Now!</h1>
         <p style = "color:white">Connect instantly via text with people around you who share your interests!</p>
