--- a/turnedOn/backendStuffs/templates/backendStuffs/index.html
+++ b/turnedOn/backendStuffs/templates/backendStuffs/index.html
@@ -56,12 +56,8 @@
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
-        <h1 style = "color:white">Get TurnedOn Now!</h1>
-        <p style = "color:white">Connect instantly via text with people around you who share your interests!</p>
-        <p><button  id="      "  onclick="  ()" type="button"   class="btn btn-primary btn-lg" >Learn more &raquo;</button></p>
-        <button id = "createAcc" type="button" class="btn btn-success" onclick="create_account()">Don't have accoount? Create one!</button>
 
-      <div class="container">
+      <div class="container" id = "fullwindow">
 
       <div class="container-fluid">
         <h1 style = "color:white">Get TurnedOn Now!</h1>
@@ -164,7 +160,8 @@
     401: function() {
        alert('bad request');
     }}});
-  
+
+    $('#fullwindow').css('height',screen.height-51)
     </script>
     <script src="static/code-samples/frontEnd/bootstrap/bootstrap-3.3.2-dist/js/bootstrap.min.js"></script>
   
