--- a/static/code-samples/frontEnd/theme.css
+++ b/static/code-samples/frontEnd/theme.css
@@ -1,19 +1,21 @@
 #logo{
 	display : inline;
 }
-
+#fullwindow{
+	background: url(jumbotron_bg.jpg) no-repeat center center;
+}
 #phoneNum{
 	display:inline;
 }
 
 .jumbotron{
 	/*height: calc(100vh-50px) !important; /* Full PAge */
-*/	position: relative;
+	position: relative;
 	background-attachment: fixed;
 	padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
 	padding-bottom: 50px;
 	color: #f8f8f8;
-	background: url(jumbotron_bg.jpg) no-repeat center center;
+	/*background: url(jumbotron_bg.jpg) no-repeat center center;*/
 	background-size: cover;
 	text-align: center;
 }
