--- a/turnedOn/backendStuffs/templates/backendStuffs/index.html
+++ b/turnedOn/backendStuffs/templates/backendStuffs/index.html
@@ -94,11 +94,11 @@
       <hr>
     </div> <!-- /container -->
 
-    <div class="container2" style = "height:450px">
+ <!--    <div class="container2" style = "height:450px">
   <div class="col-md-6 text-left wrap_title">
     <h2>View Groups in your community!</h2>
     <p class="lead" style="margin-top:0">groups here<br></p>
-  </div>
+  </div> -->
     
     
     <div class="jumbotron" style = "height:800px">
