Don't touch Jun

--- a/static/code-samples/frontEnd/theme.css
+++ b/static/code-samples/frontEnd/theme.css
@@ -1,7 +1,7 @@
 #logo{
 	display : inline;
 }
-#fullwindow{
+.container{
 	background: url(jumbotron_bg.jpg) no-repeat center center;
 }
 #phoneNum{
