--- a/turnedOn/backendStuffs/templates/backendStuffs/index.html
+++ b/turnedOn/backendStuffs/templates/backendStuffs/index.html
@@ -57,7 +57,7 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
         
-    <div class="container">
+    <div id="container3">
       <div class="container-fluid">
         <h1 style = "color:white">Get TurnedOn Now!</h1>
         <p style = "color:white">Connect instantly via text with people around you who share your interests!</p>
@@ -161,7 +161,8 @@
        alert('bad request');
     }}});
 
-    $('#fullwindow').css('height',screen.height-51)
+    $('#container3').css('height',screen.height-51);
+    $('#container3').css('width',screen.width);
     </script>
     <script src="static/code-samples/frontEnd/bootstrap/bootstrap-3.3.2-dist/js/bootstrap.min.js"></script>
   
