--- a/turnedOn/backendStuffs/templates/backendStuffs/index.html
+++ b/turnedOn/backendStuffs/templates/backendStuffs/index.html
@@ -57,7 +57,7 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
         
-    <div id="container3">
+    <div id="container3" class = "resize">
       <div class="container-fluid">
         <h1 style = "color:white">Get TurnedOn Now!</h1>
         <p style = "color:white">Connect instantly via text with people around you who share your interests!</p>
@@ -68,7 +68,7 @@
   </div>
 
 
-    <div id="container1">
+    <div id="container1" class = "resize">
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4" style="float: right; margin-right: 50px">
@@ -161,8 +161,8 @@
        alert('bad request');
     }}});
 
-    $('#container3').css('height',screen.height-51);
-    $('#container3').css('width',screen.width);
+    $('.resize').css('height',screen.height-51);
+    $('.resive').css('width',screen.width);
     </script>
     <script src="static/code-samples/frontEnd/bootstrap/bootstrap-3.3.2-dist/js/bootstrap.min.js"></script>
   
