--- a/turnedOn/backendStuffs/templates/backendStuffs/index.html
+++ b/turnedOn/backendStuffs/templates/backendStuffs/index.html
@@ -89,6 +89,7 @@
     
     <div class="jumbotron" style = "height:800px">
       <div id = "signscreen" class="container">
+        <form>
         <h1><br>Create Account</h1>
         <p>Create account and connect with people around you!</p>
         <br/>
@@ -100,7 +101,7 @@
         <br/>
         <hr/>
         <p> select the city you live in: </p>
-          <form action="database_filename">
+          
           <input list="browsers">
           <datalist id="browsers">select among this list below : <br/>
             <select name ="Location">
