--- a/turnedOn/backendStuffs/templates/backendStuffs/index.html
+++ b/turnedOn/backendStuffs/templates/backendStuffs/index.html
@@ -93,11 +93,11 @@
         <h1><br>Create Account</h1>
         <p>Create account and connect with people around you!</p>
         <br/>
-        First Name   : <input type="text" id = "firstname" name="username" size = "50"/>
+        First Name   : <input type="text" id = "firstname" name="username">
         <br/> <br/>
 
-        <form>
-        Phone Number : <input type="text" name = "username" size = "50"/>
+        <!-- <form> -->
+        Phone Number : <input type="text" name = "username">
         <br/>
         <hr/>
         <p> select the city you live in: </p>
