--- a/turnedOn/backendStuffs/templates/backendStuffs/index.html
+++ b/turnedOn/backendStuffs/templates/backendStuffs/index.html
@@ -71,7 +71,7 @@
     <div id="container1" class = "resize">
       <!-- Example row of columns -->
       <div class="row">
-        <div class="col-md-4" style="float: right; margin-right: 50px">
+        <div class="col-md-4" style="float: right; margin_top: -100px; margin-right: 50px">
           <h2>Service Description</h2>
           <p>TurnedOn is a text-based service which connects you to people in your area who share you interests. It does not require an internet connection, making it usable in remote areas and places without access to data. It also only keeps you connected while you are “TurnedOn”, making it easy to eliminate distractions. </p>
           <p>To get started, make your account using your cell-phone number, then select your interests from a drop-down menu. Our service will connect you to others in your area by adding you to text chatrooms of your different interests. From the texting chatrooms of your different interests, it’s up to you to share information, meet in person or just chat!</p>
@@ -80,13 +80,6 @@
       <hr>
     </div> <!-- /container -->
 
- <!--    <div class="container2" style = "height:450px">
-  <div class="col-md-6 text-left wrap_title">
-    <h2>View Groups in your community!</h2>
-    <p class="lead" style="margin-top:0">groups here<br></p>
-  </div> -->
-    
-    
     <div class="jumbotron" style = "height:800px">
       <div id = "signscreen" class="container">
         <h1><br>Create Account</h1>
@@ -96,7 +89,7 @@
         <br/> <br/>
 
         <form>
-        Phone Number : <input type="text" name = "username" size = "50"/>
+        Phone Number : <input type="text" id = "phonename" name = "username" size = "50"/>
         <br/>
         <hr/>
         <p> select the city you live in: </p>
