--- a/turnedOn/backendStuffs/templates/backendStuffs/index.html
+++ b/turnedOn/backendStuffs/templates/backendStuffs/index.html
@@ -68,7 +68,7 @@
   </div>
 
 
-    <div id="container1" class = "resize">
+    <div id="container1" style="background-color:green">
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4" style="float: right; margin_top: -100px; margin-right: 50px">
