--- a/turnedOn/backendStuffs/templates/backendStuffs/index.html
+++ b/turnedOn/backendStuffs/templates/backendStuffs/index.html
@@ -68,7 +68,7 @@
   </div>
 
 
-    <div id="container1" style="background-color:green; margin-top:-100px">
+    <div id="container1" class = "resize">
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4" style="float: right; margin-right: 50px">
@@ -80,18 +80,58 @@
       <hr>
     </div> <!-- /container -->
 
+ <!--    <div class="container2" style = "height:450px">
+  <div class="col-md-6 text-left wrap_title">
+    <h2>View Groups in your community!</h2>
+    <p class="lead" style="margin-top:0">groups here<br></p>
+  </div> -->
+    
+    
     <div class="jumbotron" style = "height:800px">
       <div id = "signscreen" class="container">
         <form>
-          Name: <input type = "text" id = "name">
-          Phone Number: <input type = "text" id = "phoneNumber">
-          <select id = "region">
-            <option value = "0">Please Choose From Below</option>
-          </select>
-          <button id = "getVerNum" onclick="getver()" class = "btn btn-primary btn-lg"></button>
-          Verification Number: <input type = "text" id = "verNum">
-          <button id = "getVerNum" onclick="signUpAccount()" class = "btn btn-primary btn-lg"></button>
+        <h1><br>Create Account</h1>
+        <p>Create account and connect with people around you!</p>
+        <br/>
+        First Name   : <input type="text" id = "firstname" name="username" size = "50" style="color:black;">
+        <br/> <br/>
+
+        <form>
+        Phone Number : <input type="text" name = "username" size = "50" style="color:black;"/>
+        <br/>
+        <hr/>
+        <p> select the city you live in: </p>
+          
+          <input list="browsers">
+          <datalist id="browsers">select among this list below : <br/>
+            <select name ="Location">
+              <option value = "Providence"> "Providence" </option>
+              <option value = "New York"> "New York" </option>
+              <option value = "LA"> "LA" </option>
+              <option value = "Boston"> "Boston" </option>
+              <option value = "Chicago"> "Chicago" </option>    
+            </select>
+          </datalist> 
+          </form>
+
+        <br/><br/>
+        <button type="button" id = "getVerNum" onclick="getver()" class="btn btn-primary btn-lg"> Get Verification Code </button>
+        <br/><br/>
         </form>
+
+        <p> select the city you live in: </p>
+        select among this list below : <br/>
+        <select name ="activity" id = "region">
+          <option value = "0" >please choose from below </option>
+              
+        </select>
+        <br/><br/>
+        <form>
+          Verification Code : <input type = "code" name="verificationCode" style="color:black;">
+          <br/><br/>
+          <button type="button" onclick="signupAccount()" class="btn btn-primary btn-lg" > Create Account </button>
+        </form>
+
       </div>
     </div>
 
