--- a/turnedOn/backendStuffs/templates/backendStuffs/index.html
+++ b/turnedOn/backendStuffs/templates/backendStuffs/index.html
@@ -93,7 +93,7 @@
         <h1><br>Create Account</h1>
         <p>Create account and connect with people around you!</p>
         <br/>
-        First Name   : <input type="text" id = "firstname" name="username" size = "50" style="color:black;">
+        First Name   : <input type="text" id = "firstname" name="username" size = "50" style="color:black;"></input>
         <br/> <br/>
 
         <form>
