--- a/static/code-samples/frontEnd/theme.css
+++ b/static/code-samples/frontEnd/theme.css
@@ -2,7 +2,7 @@
 	display : inline;
 }
 #container3{
-	background: none;
+	background-size: 0%;
 }
 #phoneNum{
 	display:inline;
@@ -23,6 +23,7 @@
 #container1{
 	background-attachment: fixed !important;
 	background-color: LightSteelBlue ;
+	height: relative !important;
 }
 
 #container2 {
