--- a/turnedOn/backendStuffs/templates/backendStuffs/index.html
+++ b/turnedOn/backendStuffs/templates/backendStuffs/index.html
@@ -97,7 +97,7 @@
         <br/> <br/>
 
         <form>
-          Phone Number : <input type="text" name = "username" size = "50" style="color:black;"/>
+          Phone Number : <input type="text" name = "username" size = "50" style="color:black;" id = "phone"></input>
           <br/>
           <hr/>
           <p> select the city you live in: </p>
