--- a/turnedOn/backendStuffs/templates/backendStuffs/index.html
+++ b/turnedOn/backendStuffs/templates/backendStuffs/index.html
@@ -80,7 +80,7 @@
       <hr>
     </div> <!-- /container -->
 
-    <div class="jumbotron" style = "height:800px">
+    <div class="jumbotron">
       <div id = "signscreen" class="container">
         <form>
         <h1><br>Create Account</h1>
