--- a/turnedOn/backendStuffs/templates/backendStuffs/index.html
+++ b/turnedOn/backendStuffs/templates/backendStuffs/index.html
@@ -90,7 +90,7 @@
     <!--<div class="jumbotron" style = "height:800px">-->
       <div id = "signscreen" class="container">
         <form>
-        <h1><br>Create Account</h1>
+        <h1>Create Account</h1>
         <p>Create account and connect with people around you!</p>
         <br/>
         First Name   : <input type="text" id = "firstname" name="username" size = "50" style="color:black;"></input>
