--- a/turnedOn/backendStuffs/templates/backendStuffs/index.html
+++ b/turnedOn/backendStuffs/templates/backendStuffs/index.html
@@ -43,7 +43,7 @@
             </div>
             <button id="signin"  onclick="login()" type="button" class="btn btn-success">Sign in</button>
           </form>
-          <form class="navbar-form navbar-right">
+          <form class="navbar-form navbar-right" action = "#">
             <div class="form-group">
               <input type="text" id = "phoneNumber" placeholder="Phone Number" class="form-control">
             </div>
