--- a/turnedOn/backendStuffs/templates/backendStuffs/index.html
+++ b/turnedOn/backendStuffs/templates/backendStuffs/index.html
@@ -47,7 +47,7 @@
             <div class="form-group">
               <input type="text" id = "phoneNumber" placeholder="Phone Number" class="form-control">
             </div>
-            <button id = "getcode" type="submit" class="btn btn-success" onclick="validate()">Get Verfication Code</button>
+            <button id = "getcode"  class="btn btn-success" onclick="validate()">Get Verfication Code</button>
           </form>
         </div>
         </div><!--/.navbar-collapse -->
