--- a/turnedOn/backendStuffs/templates/backendStuffs/index.html
+++ b/turnedOn/backendStuffs/templates/backendStuffs/index.html
@@ -92,12 +92,12 @@
         <form>
         <h1>Create Account</h1>
         <p>Create account and connect with people around you!</p>
-        <br/>
-        First Name   : <input type="text" id = "firstname" name="username" size = "50" style="color:black;"></input>
-        <br/> <br/>
+        <br>
+        First Name   : <input type="text" id = "firstname" name="username" size = "50" style="color:white;"></input>
+        <br>
 
         <form>
-          Phone Number : <input type="text" name = "username" size = "50" style="color:black;" id = "phone"></input>
+          Phone Number : <input type="text" name = "username" size = "50" style="color:white;" id = "phone"></input>
           <br/>
           <hr/>
           <p> select the city you live in: </p>
@@ -106,7 +106,7 @@
           <option value = "0" >please choose from below </option>
                 
           </select>
-          <br/><br/>
+          <br/>
         </form>
 
         <br/><br/>
