--- a/static/code-samples/frontEnd/theme.css
+++ b/static/code-samples/frontEnd/theme.css
@@ -44,7 +44,8 @@
 	background-attachment: fixed;
 	background-size: cover;
 	background-position: center;
+}
 
-	
-
+form > *{
+	font-color: white !important;
 }
