--- a/turnedOn/backendStuffs/templates/backendStuffs/index.html
+++ b/turnedOn/backendStuffs/templates/backendStuffs/index.html
@@ -93,11 +93,11 @@
         <h1>Create Account</h1>
         <p>Create account and connect with people around you!</p>
         <br>
-        First Name   : <input type="text" id = "firstname" name="username" size = "50" style="color:white;"></input>
+        <input type="text" placeholder="First Name" name="username"></input>
         <br>
 
         <form>
-          Phone Number : <input type="text" name = "username" size = "50" style="color:white;" id = "phone"></input>
+          <input type="text" placeholder="Phone Number" name = "username"></input>
           <br/>
           <hr/>
           <p> select the city you live in: </p>
