--- a/turnedOn/backendStuffs/templates/backendStuffs/index.html
+++ b/turnedOn/backendStuffs/templates/backendStuffs/index.html
@@ -102,15 +102,16 @@
           <hr/>
           <p> select the city you live in: </p>
           select among this list below : <br/>
-          <select name ="activity" id = "region">
-          <option value = "0" >please choose from below </option>
-                
+          <div>
+            <select name ="activity" id = "region">
+            <option value = "0" >please choose from below </option>
+          </div>     
           </select>
           <br/>
         </form>
 
         <br/><br/>
-        <button style="color.white" type="button" id = "getVerNum" onclick="getver()" class="btn btn-primary btn-lg"> Get Verification Code </button>
+        <button type="text" placeholder="Get Verification Code" id="getVerNum" onclick="getver()" class="btn btn-primary btn-lg"></button>
         <br/><br/>
         </form>
 
