--- a/turnedOn/backendStuffs/templates/backendStuffs/index.html
+++ b/turnedOn/backendStuffs/templates/backendStuffs/index.html
@@ -93,11 +93,11 @@
         <h1>Create Account</h1>
         <p>Create account and connect with people around you!</p>
         <br>
-        <input type="text" placeholder="First Name" name="username"></input>
+        <input type="text" placeholder="First Name" name="username" id="username"></input>
         <br>
 
         <form>
-          <input type="text" placeholder="Phone Number" name = "username"></input>
+          <input type="text" placeholder="Phone Number" name = "phone" id="phone"></input>
           <br/>
           <hr/>
           <p> select the city you live in: </p>
