--- a/turnedOn/backendStuffs/templates/backendStuffs/index.html
+++ b/turnedOn/backendStuffs/templates/backendStuffs/index.html
@@ -89,7 +89,7 @@
     
     <!--<div class="jumbotron" style = "height:800px">-->
       <div id = "signscreen" class="container">
-        <form>
+        <form action="#">
         <h1>Create Account</h1>
         <p>Create account and connect with people around you!</p>
         <br>
@@ -111,7 +111,7 @@
         </form>
 
         <br/><br/>
-        <button type="text" placeholder="Get Verification Code" id="getVerNum" onclick="getver()" class="btn btn-primary btn-lg"></button>
+        <button type="text" placeholder="Get Verification Code" id="getVerNum" onclick="getver()" class="btn btn-primary btn-lg">Get Verification Code</button>
         <br/><br/>
         </form>
 
