--- a/turnedOn/backendStuffs/templates/backendStuffs/index.html
+++ b/turnedOn/backendStuffs/templates/backendStuffs/index.html
@@ -152,7 +152,7 @@
     }}});
 
     $('.resize').css('height',screen.height-51);
-    $('.resive').css('width',screen.width);
+    $('.resize').css('width',screen.width);
     </script>
     <script src="static/code-samples/frontEnd/bootstrap/bootstrap-3.3.2-dist/js/bootstrap.min.js"></script>
   
