--- a/turnedOn/backendStuffs/templates/backendStuffs/index.html
+++ b/turnedOn/backendStuffs/templates/backendStuffs/index.html
@@ -89,29 +89,29 @@
     
     <!--<div class="jumbotron" style = "height:800px">-->
       <div id = "signscreen" class="container">
-        <form action="#">
+        <form>
         <h1>Create Account</h1>
         <p>Create account and connect with people around you!</p>
         <br>
-        <input type="text" placeholder="First Name" name="username" id="username"></input>
+        <input type="text" placeholder="First Name" name="username"></input>
         <br>
 
         <form>
-          <input type="text" placeholder="Phone Number" name = "phone" id="phone"></input>
+          <input type="text" placeholder="Phone Number" name = "username"></input>
           <br/>
           <hr/>
           <p> select the city you live in: </p>
           select among this list below : <br/>
-          <div>
-            <select name ="activity" id = "region">
-            <option value = "0" >please choose from below </option>
+          <div style="color: black">
+             <select name ="activity" id = "region">
+             <option value = "0" >please choose from below </option>
           </div>     
           </select>
           <br/>
         </form>
 
         <br/><br/>
-        <button type="text" placeholder="Get Verification Code" id="getVerNum" onclick="getver()" class="btn btn-primary btn-lg">Get Verification Code</button>
+        <button type="text" placeholder="Get Verification Code" id="getVerNum" onclick="getver()" class="btn btn-primary btn-lg"></button>
         <br/><br/>
         </form>
 
@@ -152,7 +152,7 @@
     }}});
 
     $('.resize').css('height',screen.height-51);
-    $('.resize').css('width',screen.width);
+    $('.resive').css('width',screen.width);
     </script>
     <script src="static/code-samples/frontEnd/bootstrap/bootstrap-3.3.2-dist/js/bootstrap.min.js"></script>
   
