--- a/turnedOn/backendStuffs/templates/backendStuffs/index.html
+++ b/turnedOn/backendStuffs/templates/backendStuffs/index.html
@@ -93,17 +93,17 @@
         <h1>Create Account</h1>
         <p>Create account and connect with people around you!</p>
         <br>
-        <input type="text" placeholder="First Name" name="username" id="username"></input>
+        <input type="text" placeholder="First Name" name="username" id="username" style="color:black;" ></input>
         <br>
 
         <form>
-          <input type="text" placeholder="Phone Number" name = "phone" id="phone"></input>
+          <input type="text" placeholder="Phone Number" name = "phone" id="phone" style="color:black;" ></input>
           <br/>
           <hr/>
           <p> select the city you live in: </p>
           select among this list below : <br/>
           <div>
-            <select name ="activity" id = "region">
+            <select name ="activity" id = "region" style="color:black;" >
             <option value = "0" >please choose from below </option>
           </div>     
           </select>
