--- a/turnedOn/backendStuffs/templates/backendStuffs/index.html
+++ b/turnedOn/backendStuffs/templates/backendStuffs/index.html
@@ -105,6 +105,7 @@
           <div style="color: black">
              <select name ="activity" id = "region">
              <option value = "0" >please choose from below </option>
+             <option value = "LosAngeles">Los Angeles</option>
           </div>     
           </select>
           <br/>
