--- a/turnedOn/backendStuffs/templates/backendStuffs/index.html
+++ b/turnedOn/backendStuffs/templates/backendStuffs/index.html
@@ -113,7 +113,7 @@
         </form>
 
         <br/><br/>
-        <button type="text" placeholder="Get Verification Code" id="getVerNum" onclick="getver()" class="btn btn-primary btn-lg">Get Verification Code</button>
+        <button placeholder="Get Verification Code" id="getVerNum" onclick="getver()" class="btn btn-primary btn-lg">Get Verification Code</button>
         <br/><br/>
         </form>
 
