--- a/turnedOn/backendStuffs/templates/backendStuffs/index.html
+++ b/turnedOn/backendStuffs/templates/backendStuffs/index.html
@@ -119,7 +119,7 @@
 
         
         <form>
-          Verification Code : <input type = "code" name="verificationCode" style="color:black;" id="ver">
+          Verification Code : <input type = "code" name="verificationCode" style="color:black !important;" id="ver">
           <br/><br/>
           <button type="button" onclick="signupAccount()" class="btn btn-primary btn-lg" > Create Account </button>
         </form>
