--- a/static/code-samples/frontEnd/theme.css
+++ b/static/code-samples/frontEnd/theme.css
@@ -21,10 +21,10 @@
 }
 
 #container1{
-	display: block;
-	background-attachment: fixed !important;
+/*	display: block;
+*/	background-attachment: fixed !important;
 	background-color: LightSteelBlue ;
-	height: 350px !important;
+	height: 350px;
 	text-align: center;
 }
 
