Fixed typos. Get the phone number from the correct field.

--- a/turnedOn/backendStuffs/templates/backendStuffs/index.html
+++ b/turnedOn/backendStuffs/templates/backendStuffs/index.html
@@ -39,7 +39,7 @@
           <div id = "tobereplaced">
           <form class="navbar-form navbar-right">
             <div class="form-group">
-              <input type="verification" id = "verify" placeholder = "Verficiation Code" class ="form-control" >
+              <input type="verification" id = "verify" placeholder = "Verification Code" class ="form-control" >
             </div>
             <button id="signin"  onclick="login()" type="button" class="btn btn-success">Sign in</button>
           </form>
