--- a/turnedOn/backendStuffs/templates/backendStuffs/index.html
+++ b/turnedOn/backendStuffs/templates/backendStuffs/index.html
@@ -93,11 +93,11 @@
         <h1>Create Account</h1>
         <p>Create account and connect with people around you!</p>
         <br>
-        <input type="text" placeholder="First Name" name="username"></input>
+        <input type="text" placeholder="First Name" name="username" style="color: black;"></input>
         <br>
 
         <form>
-          <input type="text" placeholder="Phone Number" name = "username"></input>
+          <input type="text" placeholder="Phone Number" name = "username" style="color: black;"></input>
           <br/>
           <hr/>
           <p> select the city you live in: </p>
@@ -116,13 +116,13 @@
         </form>
 
         <br/><br/>
-        <button type="text" placeholder="Get Verification Code" id="getVerNum" onclick="getver()" class="btn btn-primary btn-lg"></button>
+        <button type="text" placeholder="Get Verification Code" id="getVerNum" onclick="getver()" class="btn btn-primary btn-lg">Get Verification Code</button>
         <br/><br/>
         </form>
 
         
         <form>
-          Verification Code : <input type = "code" name="verificationCode" style="color:black;" id="ver">
+          Verification Code : <input type = "code" name="verificationCode" style="color: black;" id="ver">
           <br/><br/>
           <button type="button" onclick="signupAccount()" class="btn btn-primary btn-lg" > Create Account </button>
         </form>
