--- a/turnedOn/backendStuffs/templates/backendStuffs/index.html
+++ b/turnedOn/backendStuffs/templates/backendStuffs/index.html
@@ -118,15 +118,15 @@
         </form>
 
         <br/><br/>
-        <button type="text" placeholder="Get Verification Code" id="getVerNum" onclick="getver()" class="btn btn-primary btn-lg">Get Verification Code</button>
+        <button type="text" placeholder="Get Verification Code" id="getVerNum" style = "color: black !important; "onclick="getver()" class="btn btn-primary btn-lg">Get Verification Code</button>
         <br/><br/>
         </form>
 
         
         <form>
-          Verification Code : <input type = "code" name="verificationCode" style="color: black;" id="ver">
+          Verification Code : <input type = "code" name="verificationCode" style="color: black !important;" id="ver">
           <br/><br/>
-          <button type="button" onclick="signupAccount()" class="btn btn-primary btn-lg" > Create Account </button>
+          <button type="button" onclick="signupAccount()" class="btn btn-primary btn-lg" style ="color:black !important;" > Create Account </button>
         </form>
 
       </div>
