--- a/turnedOn/backendStuffs/templates/backendStuffs/index.html
+++ b/turnedOn/backendStuffs/templates/backendStuffs/index.html
@@ -93,18 +93,18 @@
         <h1>Create Account</h1>
         <p>Create account and connect with people around you!</p>
         <br>
-        <input type="text" placeholder="First Name" name="username" style="color: black;"></input>
+        <input type="text" placeholder="First Name" name="username" style="color: black !important;"></input>
         <br>
 
         <form>
-          <input type="text" placeholder="Phone Number" name = "username" style="color: black;"></input>
+          <input type="text" placeholder="Phone Number" name = "username" style="color: black !important;"></input>
           <br/>
           <hr/>
           <p> select the city you live in: </p>
           select among this list below : <br/>
 
           <div>
-			<select name ="activity" id = "region" onchange="onCityWasChanged(this);">
+			<select name ="activity" id = "region" onchange="onCityWasChanged(this);" style = "color:black !important">
 				<option value = "0" >please choose from below </option>
 			</select>
           </div>     
